changed block parsing